kubernetes/ckad/webapp/webapp-default-httpd-backend/default-http-backend-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: webapp
  name: default-http-backend
spec:
  selector:
    app: webapp-default-http-backend
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
