kubernetes/ckad/webapp/webapp-default-httpd-backend/default-httpd-backend-traefik-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: webapp
  name: default-http-backend
  annotations:
spec:
  rules:
  - host: webapp.fritz.box
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: default-http-backend
            port:
              number: 80
